--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,29 @@
-name: Build and Deploy to Docker Hub
 
-on:
-  push:
-    branches:
-      - master
+# These pipe lines we can goole how waht the actions i have to use and just copy it 
 
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+name: Build on PR   # frist we give the name 
+
+on:   # this mean when should this run 
+  pull_request:  # it runs whenever the pull-request is made 
+    branches: # on any code base but we define master branch means   
+      - master # if someone create an pull-request on master branch then run th ework flow if someone creates a pull request on diffrent branch dont runs this work flow 
+      # - main here we can also add more branch  
+
+jobs: 
+  build: # we have to run a single job a build job 
+    runs-on: ubuntu-latest # this job runs on this  ubuntu-latest
     steps:
-    - name: Check Out Repo
-      uses: actions/checkout@v2
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and Push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./docker/Dockerfile.user
-        push: true
-        tags: 100xdevs/week-18-class:latest  # Replace with your Docker Hub username and repository
-
-    - name: Verify Pushed Image
-      run: docker pull 100xdevs/week-18-class:latest  # Replace with your Docker Hub username and repository
-
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          sudo docker pull 100xdevs/week-18-class:latest
-          sudo docker stop web-app || true
-          sudo docker rm web-app || true
-          sudo docker run -d --name web-app -p 3005:3000 100xdevs/week-18-class:latest
+      - uses: actions/checkout@v3 # this will cloens the repository 
+      - name: Use Node.js  # insall node.js on machine
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20' # version on node.js 
+      
+      - name: Install Dependencies # run's npm install
+        run: npm install
+      
+      - name: Generate prisma client # this will generate the client prisma client
+        run: npm run db:generate
+        
+      - name: Run Build
+        run: npm run build
