--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,30 @@
-name: Build on PR
+name: Build and Deploy to Docker Hub
 
-on:
-  pull_request:
+on:  # this mean when should this run 
+  push: # it runs whenever the push code on master branch
     branches:
       - master
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      
-      - name: Install Dependencies
-        run: npm install
-      
-      - name: Generate prisma client
-        run: npm run db:generate
-        
-      - name: Run Build
-        run: npm run build
+    - name: Check Out Repo
+      uses: actions/checkout@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: . # this means from where is the docker file comming from 
+        file: ./docker/Dockerfile.user
+        push: true
+        tags: mayan155/week-18:latest  # Replace with your Docker Hub username and repository
+
+    - name: Verify Pushed Image
+      run: docker pull 100xdevs/web-app:latest  # Replace with your Docker Hub username and repository
