--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,73 @@
 
-# These pipe lines we can goole how waht the actions i have to use and just copy it 
+# # These pipe lines we can goole how waht the actions i have to use and just copy it 
 
-name: Build on PR   # frist we give the name 
+# name: Build on PR   # frist we give the name 
 
-on:   # this mean when should this run 
-  pull_request:  # it runs whenever the pull-request is made 
-    branches: # on any code base but we define master branch means   
-      - master # if someone create an pull-request on master branch then run th ework flow if someone creates a pull request on diffrent branch dont runs this work flow 
-      # - main here we can also add more branch  
+# on:   # this mean when should this run 
+#   pull_request:  # it runs whenever the pull-request is made 
+#     branches: # on any code base but we define master branch means   
+#       - master # if someone create an pull-request on master branch then run th ework flow if someone creates a pull request on diffrent branch dont runs this work flow 
+#       # - main here we can also add more branch  
 
-jobs: 
-  build: # we have to run a single job a build job 
-    runs-on: ubuntu-latest # this job runs on this  ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3 # this will cloens the repository 
-      - name: Use Node.js  # insall node.js on machine
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20' # version on node.js 
+# jobs: 
+#   build: # we have to run a single job a build job 
+#     runs-on: ubuntu-latest # this job runs on this  ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3 # this will cloens the repository 
+#       - name: Use Node.js  # insall node.js on machine
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '20' # version on node.js 
       
-      - name: Install Dependencies # run's npm install
-        run: npm install
+#       - name: Install Dependencies # run's npm install
+#         run: npm install
       
-      - name: Generate prisma client # this will generate the client prisma client
-        run: npm run db:generate
+#       - name: Generate prisma client # this will generate the client prisma client
+#         run: npm run db:generate # The command npm run db:generate is a custom script defined in your project's package.json file. It's not a built-in npm command. to tu kya krta hia ki package.json me jaega or sctip me jo bhi tujhe naame dalna hai dal jese idhar ye dala or fhir actual cmd dalde abhi jake dekhle tu udhar ki kya kese custom likhi tune cmd
         
-      - name: Run Build
-        run: npm run build
+#       - name: Run Build
+#         run: npm run build
+
+
+name: Build and Deploy to Docker Hub
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check Out Repo
+      uses: actions/checkout@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./docker/Dockerfile.user
+        push: true
+        tags: mayan155/week-18:latest   # Replace with your Docker Hub username and repository
+
+    - name: Verify Pushed Image
+      run: docker pull 100xdevs/week-18-class:latest  # Replace with your Docker Hub username and repository
+
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          sudo docker pull 100xdevs/week-18-class:latest
+          sudo docker stop web-app || true
+          sudo docker rm web-app || true
+          sudo docker run -d --name web-app -p 3005:3000 100xdevs/week-18-class:latest
